--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,8 +46,8 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2 # Updated to v2 (fixes masking warning)
+        id: login-ecr-deploy # Add an ID here
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push image to Amazon ECR
         env:
@@ -77,15 +77,17 @@ jobs:
 
       - name: Pull latest images
         run: |
-          docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          # Use the registry output from the login step instead of a static secret
+          docker pull ${{ steps.login-ecr-deploy.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
       - name: Run Docker Image to serve users
         run: |
-          # Added a check to stop/remove container if it already exists to prevent "Name already in use" errors
           docker stop cnncls || true && docker rm cnncls || true
           docker run -d -p 8080:8080 --name cnncls \
+          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
           -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-          ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          -e AWS_REGION=${{ secrets.AWS_REGION }} \
+          ${{ steps.login-ecr-deploy.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
       
       - name: Clean previous images and containers
         run: |
