Fix ECR registry step reference and add permissions
Updated ECR registry output step reference and added permissions section.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
       - main
     paths-ignore:
       - 'README.md'
-
+      
 permissions:
   id-token: write 
   contents: read
@@ -51,7 +51,7 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ steps.login-ecr-step.outputs.registry }} # Use the ID here
           ECR_REPOSITORY_NAME: ${{ secrets.ECR_REPOSITORY_NAME }}
           IMAGE_TAG: latest
         run: |
